# opera6

./: .gitignore  CMakeLists.txt  READ.me  README.md
src/: editor.cpp  editor.h
tests/: test_editor.cpp
